# hw10_module_10

./: docker-compose.yml  pyproject.toml
mysite/: .env.example
mysite/mysite/: settings.py  urls.py
mysite/quoteapp/: admin.py  forms.py  models.py  parser.py  urls.py  views.py
mysite/quoteapp/management/commands/: migrate_mongo.py
mysite/quoteapp/migrations/: 0001_initial.py  0002_author_user_quote_user.py  0003_alter_tag_name.py  0004_tag_user.py
mysite/quoteapp/static/quoteapp/: alerts.css  style.css
mysite/quoteapp/templates/quoteapp/: about.html  add_author.html  add_quote.html  add_tag.html  base.html  delete.html  quote_detail.html  scraping.html  tag_detail.html  view_my_authors.html  view_my_quotes.html  view_my_tags.html
mysite/users/: forms.py  views.py
mysite/users/migrations/: 0001_initial.py
mysite/users/templates/users/: login.html  signup.html
